# openapi-cat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs  openapi_joiner.rs
test-data/: config.yaml
