[package]
name = "openapi-cat"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive", "cargo"] }
openapiv3 = "1.0.2"
serde = "1.0.166"
serde_json = "1.0.99"
serde_yaml = "0.9.22"
indexmap = "1.9.3"
chrono = "0.4.26"
regex = "1.9.1"
colored = "2.0.4"
